[gd_scene load_steps=2 format=3 uid="uid://dr81icok2kmy0"]

[ext_resource type="Script" path="res://addons/journalgd/Editor/editor_quest_goal.gd" id="1_h4rvw"]

[node name="Goal" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -992.0
offset_bottom = -399.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h4rvw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GoalName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Goal Name"
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="OptionalButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Optional?"

[node name="BaseID" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Filter"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Amount"

[node name="AmountBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
rounded = true
custom_arrow_step = 1.0

[node name="OnlyWhileActive" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Only while active"

[node name="Delete" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Remove step"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_delete_pressed"]
